# ciservice

./: .editorconfig  .gitignore  Cargo.toml  Makefile  Rocket.toml
docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
migrations/2022-10-15-183144_create_job/: down.sql  up.sql
migrations/2022-10-16-224207_add_updated_at_job/: down.sql  up.sql
migrations/2022-10-16-225637_manage_updated_at_job/: up.sql
migrations/2022-10-18-000526_create_job_parameter/: down.sql  up.sql
postman/collections/: ciservice.postman_collection.json
postman/schemas/: ciservice.openapi.yaml
src/: config.rs  errors.rs  lib.rs  main.rs  playground.rs  schema.rs
src/database/: jobs.rs  mod.rs  pagination.rs
src/guards/: host.rs  mod.rs  validated.rs
src/models/: job.rs  mod.rs
src/routes/: job.rs  mod.rs  playground.rs
